sort.basic.comb.AlgCombSort.scala.error
Compilation error:
AlgCombSort:20: error: 'while' expected but '}' found.
  }while (gap > 1 || used)
  ^